# Mnemosyne

./: .gitignore  Cargo.toml  File Specification.md  Readme.md
src/: main.rs  story.story  tst.rs
src/commands/: general.rs  mod.rs  story.rs
src/story/: mod.rs  story.rs  story2.rs  story_builder.rs  story_parser.rs  story_structs.rs
src/story/tests/: story_parser_test.rs
src/utilites/: mod.rs  story_parser.rs
src/utilities/: error_reporting.rs  mod.rs  response_builder.rs  type_map.rs  type_map_builder.rs
