[package]
name = "old_man_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bot"
path = "src/main.rs"

[[bin]]
name = "test"
path = "src/tst.rs"

[dependencies]
serenity = "0.11"
tokio = { version = "1.21.2", features = ["macros", "signal", "rt-multi-thread"] }
dotenv = "0.15.0"
tracing = "0.1.23"
tracing-subscriber = "0.2"

nom = "7.1.2"