[package]
name = "old_man_rs"
version = "0.1.0"
edition = "2021"
default-run = "bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bot"
path = "src/main.rs"



[dependencies]
serenity = "0.11"
tokio = { version = "1.21.2", features = ["macros", "signal", "rt-multi-thread"] }
dotenv = "0.15.0"
tracing = "0.1.23"
tracing-subscriber = "0.2"

slab_tree = "0.3.2"

nom = "7.1.2"
r3bl_rs_utils = "0.9.3"
