[package]
name = "Mnemosyne"
version = "0.1.0"
edition = "2021"
default-run = "bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bot"
path = "src/main.rs"


[dependencies]
serenity = {version = "0.11", features=["collector"]}
tokio = { version = "1.21.2", features = ["macros", "signal", "rt-multi-thread"] }
dotenv = "0.15.0"
tracing = "0.1.23"
tracing-subscriber = "0.2"
update-informer = { version = "0.6.0", default_features = false, features = ["github"] }


nom = "7.1.2"
